@@ -7,6 +7,8 @@
 
 - Added the ability to use arbitrary format functions in fmt_multi.
 
+- Added support for enumerate and itemize in cli-generate.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
